fix: Fixed product image sizing on smaller screens and similar images being too narrow

--- a/webroot/css/media.css
+++ b/webroot/css/media.css
@@ -420,7 +420,6 @@
 	}
 
 	.product-box-main {
-		margin-top: 30px;
 		display: flex;
 		align-items: center;
 		justify-content: center;
