--- a/webroot/css/shop.css
+++ b/webroot/css/shop.css
@@ -22,6 +22,11 @@
     background: linear-gradient(145deg, #ffffff, #f3f0f0); /* Soft gradient background */
 }
 
+.main-product {
+    /* margin-bottom: 20px; */
+    background-color: transparent !important;
+}
+
 .page-header {
     margin-top: 0;
 }
@@ -42,3 +47,4 @@
     margin: 0 !important;
     display: inline-block; /* Ensure items are inline */
 }
+
